fix spacing and add back in rounded

--- a/client/src/components/PostList/postList.css
+++ b/client/src/components/PostList/postList.css
@@ -32,7 +32,8 @@
    background-size: cover;
    background-repeat: no-repeat;
    padding-top: 5px;
-   border-radius: 15px;
+   padding-left: 10px;
+   border-radius: 50px;
    border: 3px solid black;
 }
 
@@ -52,6 +53,7 @@
    font-size: small;
    font-style: italic;
    margin-left: 1rem;
+   margin-top: 3px;
 }
 
 .post-pic-container {
